--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "ogma-vue3",
   "version": "0.0.1",
   "private": true,
-  "main": "dist/lib.umd.min.js",
   "scripts": {
     "serve": " serve",
-    "help": "vue-cli-service help build",
-    "build": "vue-cli-service build --target lib --name lib src/main.js ",
+    "build": "vue-cli-service build --target lib --name lib src/main.js",
     "test:unit": "vue-cli-service test:unit",
-    "docs:dev": "vuepress dev docs",
+    "lint": "vue-cli-service lint",
+    "docg": "vue-docgen src/components/Ogma.vue docs/components",
     "docs:build": "vuepress build docs",
-    "lint": "vue-cli-service lint"
+    "docs:dev": "vuepress dev docs",
+    "help": "vue-cli-service help build"
   },
+  "main": "dist/lib.umd.min.js",
   "dependencies": {
     "@linkurious/ogma": "^4.0.7",
     "vue": "^3.0.0"
@@ -27,7 +28,10 @@
     "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-cli-plugin-vuepress": "~0.1.1",
+    "vue-docgen-cli": "^4.44.15",
+    "vuepress": "^0.10.0"
   },
   "eslintConfig": {
     "root": true,
