--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "vue-cli-plugin-vuepress": "~0.1.1",
     "vue-docgen-cli": "^4.44.15",
-    "vuepress": "^0.10.0"
+    "vuepress": "^2.0.0-beta.35"
   },
   "eslintConfig": {
     "root": true,
