--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vue/cli-plugin-unit-mocha": "^4.5.15",
     "@vue/cli-service": "^4.5.15",
     "@vue/test-utils": "^2.0.0-0",
+    "@vuepress/plugin-search": "^2.0.0-beta.35",
     "babel-eslint": "^10.1.0",
     "canvas": "^2.9.0",
     "chai": "^4.1.2",
