--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "build": "vue-cli-service build --target lib --name lib src/main.js",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "docg": "vue-docgen src/components/ docs -w",
-    "docs:build": "vuepress build docs --clean-temp --clean-cache",
-    "docs:dev": "vuepress dev docs --clean-temp --clean-cache --debug",
+    "docg:dev": "vue-docgen src/components/ docs -w",
+    "docg:build": "vue-docgen src/components/ docs",
+    "predocs:build": "npm run docg:build --clean-temp --clean-cache",
+    "docs:build": "vuepress build docs",
+    "predocs:publish": "npm run docs:build",
+    "docs:publish": "gh-pages -d docs/.vuepress/dist",
+    "docs:dev": "vuepress dev docs",
     "help": "vue-cli-service help build"
   },
   "main": "dist/lib.umd.min.js",
@@ -30,6 +34,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
+    "gh-pages": "^3.2.3",
     "vue-cli-plugin-vuepress": "~0.1.1",
     "vue-docgen-cli": "^4.44.15",
     "vuepress": "^2.0.0-beta.35"
