--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
     "gh-pages": "^3.2.3",
+    "naive-ui": "^2.25.2",
+    "vfonts": "0.0.3",
     "vue-cli-plugin-vuepress": "~0.1.1",
     "vue-docgen-cli": "^4.44.15",
     "vuepress": "^2.0.0-beta.35"
