--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
   },
   "main": "dist/lib.umd.min.js",
   "dependencies": {
-    "@linkurious/ogma": "^4.0.9",
-    "vue": "^3.2.31"
+    "@linkurious/ogma": "4.0.9",
+    "vue": "3.2.31"
   },
   "devDependencies": {
     "@linkurious/code-tools": "0.0.6",
-    "@vue/cli-plugin-babel": "^4.5.17",
-    "@vue/cli-plugin-eslint": "^4.5.17",
-    "@vue/cli-plugin-unit-mocha": "^4.5.17",
-    "@vue/cli-service": "^4.5.17",
-    "@vue/test-utils": "^2.0.0-rc.19",
-    "@vuepress/plugin-search": "^2.0.0-beta.38",
-    "babel-eslint": "^10.1.0",
-    "canvas": "^2.9.1",
-    "chai": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^7.0.0",
-    "gh-pages": "^3.2.3",
-    "mocha-junit-reporter": "^2.0.2",
-    "mocha-multi-reporters": "^1.5.1",
-    "naive-ui": "^2.27.0",
+    "@vue/cli-plugin-babel": "4.5.17",
+    "@vue/cli-plugin-eslint": "4.5.17",
+    "@vue/cli-plugin-unit-mocha": "4.5.17",
+    "@vue/cli-service": "4.5.17",
+    "@vue/test-utils": "2.0.0-rc.19",
+    "@vuepress/plugin-search": "2.0.0-beta.38",
+    "babel-eslint": "10.1.0",
+    "canvas": "2.9.1",
+    "chai": "4.1.2",
+    "eslint": "6.8.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-vue": "7.20.0",
+    "gh-pages": "3.2.3",
+    "mocha-junit-reporter": "2.0.2",
+    "mocha-multi-reporters": "1.5.1",
+    "naive-ui": "2.27.0",
     "vfonts": "0.0.3",
-    "vue-cli-plugin-vuepress": "~0.1.1",
-    "vue-docgen-cli": "^4.44.23",
-    "vuepress": "^2.0.0-beta.38"
+    "vue-cli-plugin-vuepress": "0.1.1",
+    "vue-docgen-cli": "4.44.23",
+    "vuepress": "2.0.0-beta.38"
   },
   "eslintConfig": {
     "root": true,
