updated doc command: clearer commands

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "build": "vue-cli-service build --target lib --name lib src/main.js",
     "test:unit": "vue-cli-service test:unit --reporter mocha-multi-reporters --reporter-options configFile=.test-reporters.json",
     "lint": "vue-cli-service lint",
-    "docg:dev": "vue-docgen src/components/ docs -w",
-    "docg:build": "vue-docgen src/components/ docs",
-    "predocs:build": "npm run docg:build --clean-temp --clean-cache",
-    "docs:build": "vuepress build docs",
-    "predocs:publish": "npm run docs:build",
-    "docs:publish": "gh-pages -d docs/.vuepress/dist",
-    "docs:dev": "vuepress dev docs",
+    "docgen:dev": "vue-docgen src/components/ docs -w",
+    "vuepress:dev": "vuepress dev docs",
+    "doc:dev": "concurrently 'npm run docgen:dev' 'npm run vuepress:dev'",
+    "docgen:build": "vue-docgen src/components/ docs",
+    "predoc:build": "npm run docgen:build --clean-temp --clean-cache",
+    "doc:build": "vuepress build docs",
+    "predoc:prod": "npm run doc:build",
+    "doc:prod": "gh-pages -d docs/.vuepress/dist",
     "postversion": "sync_versions",
     "help": "vue-cli-service help build"
   },
@@ -37,6 +38,7 @@
     "babel-eslint": "10.1.0",
     "canvas": "2.9.1",
     "chai": "4.1.2",
+    "concurrently": "^7.1.0",
     "eslint": "6.8.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-vue": "7.20.0",
