--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linkurious/ogma-vue",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "engines": {
     "node": "16.15.0",
     "npm": "8.5.5"
@@ -32,6 +32,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "private": false,
   "peerDependencies": {
     "@linkurious/ogma": ">4.0.9"
   },
