--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linkurious/ogma-vue",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "engines": {
     "node": "16.15.0",
     "npm": "8.5.5"
@@ -38,8 +38,7 @@
     "@linkurious/ogma": ">4.0.9"
   },
   "devDependencies": {
-    "vue": "3.2.31",
-    "@linkurious/code-tools": "0.0.6",
+    "@linkurious/code-tools": "^0.0.8",
     "@vue/cli-plugin-babel": "4.5.17",
     "@vue/cli-plugin-eslint": "4.5.17",
     "@vue/cli-plugin-unit-mocha": "4.5.17",
@@ -58,6 +57,7 @@
     "mocha-multi-reporters": "1.5.1",
     "naive-ui": "2.27.0",
     "vfonts": "0.0.3",
+    "vue": "3.2.31",
     "vue-cli-plugin-vuepress": "0.1.1",
     "vue-docgen-cli": "4.44.23",
     "vuepress": "2.0.0-beta.38"
