added TS + vite

--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@linkurious/ogma-vue",
   "version": "0.1.12",
-  "engines": {
-    "node": "16.15.0",
-    "npm": "8.5.5"
-  },
   "license": "Apache-2.0",
   "scripts": {
-    "serve": "VUE_CLI_SERVICE_CONFIG_PATH=demo-vue.config.js vue-cli-service serve",
+    "serve": "vite -c demo/vite.config.ts",
     "postbuild": "node scripts/postbuild.js && cp README.md dist",
-    "build": "vue-cli-service build --target lib --name lib src/main.js",
+    "build": "vite build",
     "test": "npm run test:unit",
     "test:unit": "vue-cli-service test:unit --reporter mocha-multi-reporters --reporter-options configFile=.test-reporters.json",
     "lint": "vue-cli-service lint",
@@ -41,28 +37,19 @@
   },
   "devDependencies": {
     "@linkurious/code-tools": "^0.0.8",
-    "@vue/cli-plugin-babel": "4.5.17",
-    "@vue/cli-plugin-eslint": "4.5.17",
-    "@vue/cli-plugin-unit-mocha": "5.0.8",
-    "@vue/cli-service": "4.5.17",
-    "@vue/test-utils": "2.0.0-rc.19",
-    "@vuepress/plugin-search": "2.0.0-beta.38",
-    "babel-eslint": "10.1.0",
-    "canvas": "2.9.1",
-    "chai": "4.1.2",
+    "@vue/test-utils": "2.4.1",
+    "@vuepress/plugin-search": "2.0.0-beta.67",
     "concurrently": "^7.1.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-vue": "7.20.0",
+    "eslint": "^8.52.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-vue": "^9.18.1",
     "gh-pages": "3.2.3",
-    "mocha-junit-reporter": "2.0.2",
-    "mocha-multi-reporters": "1.5.1",
-    "naive-ui": "2.27.0",
-    "vfonts": "0.0.3",
-    "vue": "3.2.31",
+    "naive-ui": "2.35.0",
+    "vite": "4.5.0",
+    "vue": "3.3.7",
     "vue-cli-plugin-vuepress": "0.1.1",
-    "vue-docgen-cli": "4.44.23",
-    "vuepress": "2.0.0-beta.38"
+    "vue-docgen-cli": "4.67.0",
+    "vuepress": "2.0.0-beta.67"
   },
   "browserslist": [
     "> 1%",
