--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vite build",
     "test": "vitest -c tests/unit/vitest.config.ts",
     "test:unit": "vue-cli-service test:unit --reporter mocha-multi-reporters --reporter-options configFile=.test-reporters.json",
-    "lint": "vue-cli-service lint",
+    "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml --ext ts --ext js src ./tests/**/*.test.ts",
     "docgen:dev": "vue-docgen src/components/ docs -w",
     "vuepress:dev": "vuepress dev docs",
     "doc:dev": "concurrently 'npm run docgen:dev' 'npm run vuepress:dev'",
@@ -48,14 +48,13 @@
   },
   "devDependencies": {
     "@linkurious/code-tools": "^0.0.8",
+    "@linkurious/eslint-config-ogma": "^1.0.5",
     "@vitejs/plugin-vue": "^4.4.1",
     "@vue/test-utils": "^2.4.1",
     "@vuepress/plugin-search": "2.0.0-beta.67",
     "canvas": "^2.11.2",
     "concurrently": "^7.1.0",
-    "eslint": "^8.52.0",
-    "eslint-plugin-import": "2.29.0",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint-plugin-vue": "^9.19.2",
     "gh-pages": "3.2.3",
     "happy-dom": "^12.10.3",
     "jsdom": "^22.1.0",
@@ -67,16 +66,16 @@
     "vitest": "^0.34.6",
     "vue": "3.3.7",
     "vue-cli-plugin-vuepress": "0.1.1",
+    "vue-docgen-api": "file:../vue-styleguidist/packages/vue-docgen-api",
     "vue-docgen-cli": "file:../vue-styleguidist/packages/vue-docgen-cli",
     "vue-tsc": "^1.8.22",
     "vuepress": "2.0.0-beta.67"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ],
-  "dependencies": {
-    "vue-docgen-api": "file:../vue-styleguidist/packages/vue-docgen-api"
+  "eslintConfig": {
+    "parser": "vue-eslint-parser",
+    "extends": [
+      "@linkurious/eslint-config-ogma",
+      "plugin:vue/vue3-recommended"
+    ]
   }
 }
