--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,28 +2,25 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "module": "ESNext",
+    "module": "ES6",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    // "noEmit": true,
     "jsx": "preserve",
-    
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
     "outDir": "dist",
     "declaration": true,
-    
-
     /* Linting */
     "strict": true,
+    "composite": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "esModuleInterop": true,
     "noFallthroughCasesInSwitch": true
   },
-  "exclude": ["src/App.vue", "src/main.ts"],
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/components/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.vue"]
 }
