--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
     "test": "vitest -c tests/unit/vitest.config.ts",
     "test:unit": "vue-cli-service test:unit --reporter mocha-multi-reporters --reporter-options configFile=.test-reporters.json",
     "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml --ext ts --ext js src ./tests/**/*.test.ts",
-    "docgen:dev": "vue-docgen src/components/ docs -w",
-    "vuepress:dev": "vuepress dev docs",
-    "doc:dev": "concurrently 'npm run docgen:dev' 'npm run vuepress:dev'",
-    "docgen:build": "vue-docgen src/components/ docs",
-    "docgen:test": "vue-docgen src/components/layers/Test-Compo.vue docs",
-    "predoc:build": "npm run docgen:build --clean-temp --clean-cache",
-    "doc:build": "vuepress build docs",
-    "predoc:publish": "npm run doc:build",
-    "doc:publish": "gh-pages -d docs/.vuepress/dist",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "predocs:publish": "npm run docs:build",
+    "docs:publish": "gh-pages -d docs/.vitepress/dist",
     "postversion": "sync_versions",
     "help": "vue-cli-service help build",
     "bump:patch": "npm version patch --no-git-tag-version"
@@ -51,25 +47,24 @@
     "@linkurious/eslint-config-ogma": "^1.0.5",
     "@vitejs/plugin-vue": "^4.4.1",
     "@vue/test-utils": "^2.4.1",
-    "@vuepress/plugin-search": "2.0.0-beta.67",
     "canvas": "^2.11.2",
     "concurrently": "^7.1.0",
     "eslint-plugin-vue": "^9.19.2",
     "gh-pages": "3.2.3",
     "happy-dom": "^12.10.3",
+    "jsdoc-to-markdown": "^8.0.0",
     "jsdom": "^22.1.0",
     "naive-ui": "2.35.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "typescript": "^5.2.2",
     "vite": "4.5.0",
     "vite-plugin-dts": "^3.6.3",
+    "vitepress": "^1.0.0-rc.32",
     "vitest": "^0.34.6",
     "vue": "3.3.7",
-    "vue-cli-plugin-vuepress": "0.1.1",
     "vue-docgen-api": "file:../vue-styleguidist/packages/vue-docgen-api",
     "vue-docgen-cli": "file:../vue-styleguidist/packages/vue-docgen-cli",
-    "vue-tsc": "^1.8.22",
-    "vuepress": "2.0.0-beta.67"
+    "vue-tsc": "^1.8.22"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
