--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vitest -c tests/unit/vitest.config.ts",
     "test:unit": "vitest run -c tests/unit/vitest.config.ts  --reporter=junit --reporter=default --outputFile reports/unit/junit-test-results.xml",
     "lint:ci": "eslint -f checkstyle -o reports/checkstyle.xml --ext ts --ext js src ./tests/**/*.test.ts",
+    "lint": "eslint --ext ts --ext js src ./tests/**/*.test.ts",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
